--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@apollo/client": "^3.13.8",
     "autoprefixer": "^10.4.21",
     "cross-fetch": "^4.1.0",
+    "framer-motion": "^12.12.1",
     "graphql": "^16.11.0",
     "next": "15.3.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
