--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,6 @@
     ],
     "types": ["jest", "node"]
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "jest.config.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "jest.config.js", "jest.setup.js"],
   "exclude": ["node_modules"]
 }
